--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -113,7 +113,7 @@ a.menu--link__icon {
 	background: $color-sjc-red;
 	text-align: center;
 	ul {
-		height: 100%;
+		height: 73%;
 		overflow-y: auto;
 	}
 	li { 
